fix dark mode

--- a/public/global.css
+++ b/public/global.css
@@ -8,7 +8,6 @@ body {
 body {
   color: #333;
   margin: 0;
-  padding: 8px;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -58,10 +57,10 @@ button {
 button:disabled {
   color: #999;
 }
-
+/* 
 button:not(:disabled):active {
   background-color: #ddd;
-}
+} */
 
 button:focus {
   border-color: #666;
